# condom

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
extension/: README.md  content_script.js  manifest.json  page_fetch_hook.js  popup.html  popup.js  service_worker.js  sidepanel.html  sidepanel.js
fixtures/x_graphql/: home_timeline_current_schema_minimal.json
prompts/: ambient_m3_item_score_v0.txt  identity_bootstrap_v0.md  qualitative_feed_judge_v0.md  usersim_encounter_v0.txt  usersim_feed_selection_v0.txt
scripts/: compare_arms.py  generate_feed_report.py  ingest_manual_labels.py  ingest_raw_session.py  init_db.py  make_judge_packet.py  make_or_update_profile.py  rank_session.py  render_feeds.py  run_bm25.py  run_cheap_combo.py  run_cheap_linear.py  run_m3_usersim.py  run_native.py  run_tfidf.py  score.py  serve_core.py
src/condom_core/: ambient_m3.py  candidate_window.py  config.py  db.py  feed_generation.py  feed_judge.py  feed_report.py  ingest.py  minimax_client.py  models.py  parse_llm_outputs.py  parse_x.py  predictions.py  profile.py  prompts.py  render_timeline.py  session_ranking.py
src/condom_core/api/: app.py  rank_service.py  (+1 more)
tests/: test_candidate_window.py  test_feed_ambient_api.py  test_feed_generation.py  test_feed_judge.py  test_feed_report.py  test_parse_llm_outputs.py  test_parse_x.py  test_profile_api.py  test_prompts_encounter.py  test_prompts_feed_selection.py  test_qualitative_judge_prompt.py  test_rankers_features.py  test_rankers_no_leakage.py  test_render_timeline.py  test_scoring.py  test_session_ranking.py
(+9 files in other folders)
