[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "condom-core"
version = "0.1.0"
description = "Local-first X timeline capture and reranking experiment"
requires-python = ">=3.11"
dependencies = [
  "openai",
  "python-dotenv",
  "pydantic",
  "sqlite-utils",
  "rank-bm25",
  "scikit-learn",
  "numpy",
  "pandas",
  "scipy",
  "tqdm",
  "fastapi",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
